# railroad

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE.md  README.md  check.bash  clang.bash  compile.bash  format.bash  quick_check.bash  run.bash  runtest.bash
doc/: index.md
doc/pages/: concepts.md  functions.md  quickstart.md  types.md
docs/: index.md
docs/pages/: introduction.md  notes.md  rationale.md
example/: demo.cpp
include/railroad/: Compose.h  ControlFlags.h  DefaultFailure.h  DefaultSuccess.h  FailurePipe.h  GenericCompose.h  PartialFailureResult.h  PartialSuccessPipe.h  PartialSuccessResult.h  Result.h  SuccessPipe.h  ValidateSuccess.h  abc.h  bind.h  bindf.h  binds.h  feed.h  is_instantiation.h  minimal.h  railroad.h  rbind.h  rbindf.h  rbinds.h  style.h  terminate.h
src/railroad/: main.cpp
test/railroad/: DefaultFailure.cpp  DefaultFailureTest.cpp  DefaultSuccess.cpp  DefaultSuccessTest.cpp  PartialFailureResultTest.cpp  PartialSuccessResultTest.cpp  ResultTest.cpp  basic.cpp  bindTest.cpp  bindfTest.cpp  binds.cpp  bindsTest.cpp  feed.cpp  feedTest.cpp  is_instantiationTest.cpp  main.cpp  operatorPrecedenceTest.cpp  rbindExceptionTest.cpp  rbindTest.cpp  rbindfTest.cpp  rbindsTest.cpp  styleTest.cpp  unit.cpp
